# scallop2

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  configure.bioconda.ac  configure.linux.ac  configure.mac.ac
example/: example-output.gtf
lib/: Makefile.am
lib/graph/: Makefile.am  directed_graph.cc  directed_graph.h  draw.cc  draw.h  edge_base.cc  edge_base.h  graph_base.cc  graph_base.h  undirected_graph.cc  undirected_graph.h  vertex_base.cc  vertex_base.h
lib/gtf/: Makefile.am  circular_transcript.cc  circular_transcript.h  gene.cc  gene.h  genome.cc  genome.h  item.cc  item.h  transcript.cc  transcript.h
lib/src/: RO_read.cc  assembler.h  bundle.cc  bundle.h  bundle_bridge.cc  bundle_bridge.h  hit.cc  hit.h  interval_map.cc  main.cc  partial_exon.h  path.cc  path.h  reference.cc  reference.h  router.cc
lib/util/: Makefile.am  util.cc  util.h
src/: Makefile.am  RO_read.cc  RO_read.h  assembler.cc  assembler.h  bridger.cc  bridger.h  bundle.cc  bundle.h  bundle_base.cc  bundle_base.h  bundle_bridge.cc  bundle_bridge.h  config.cc  config.h  fcluster.cc  fcluster.h  filter.cc  fragment.cc  fragment.h  hit.cc  hit.h  hyper_set.cc  hyper_set.h  interval_map.cc  interval_map.h  junction.cc  junction.h  main.cc  partial_exon.cc  partial_exon.h  path.cc  path.h  previewer.cc  previewer.h  reference.cc  region.cc  region.h  scallop.cc  scallop.h  (+10 more)
